<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        card_view:cardCornerRadius="4dp" >

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="8dp">

        <ImageView
                android:id="@+id/img_item"
                android:layout_width="150dp"
                android:layout_height="220dp"
                android:layout_marginBottom="4dp"
                android:scaleType="center"
                tools:src="@tools:sample/avatars" />

        <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/img_item"
                android:layout_toRightOf="@id/img_item"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/item_name"/>

        <LinearLayout
                android:id="@+id/layout_satu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item_name"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_toEndOf="@id/img_item"
                android:layout_toRightOf="@id/img_item"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/tv_item_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:text="@string/category"/>
            <TextView
                    android:id="@+id/tv_item_released"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:text="@string/tahun"/>

            <TextView
                    android:id="@+id/tv_item_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:text="@string/rating"/>

            <TextView
                    android:id="@+id/tv_item_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:text="@string/genre"/>
        </LinearLayout>

        <TextView
                android:id="@+id/tv_item_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/layout_button"
                android:layout_below="@+id/layout_satu"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_toEndOf="@id/img_item"
                android:layout_toRightOf="@id/img_item"
                android:ellipsize="end"
                android:maxLines="3"
                tools:text="@string/detail" />

        <LinearLayout
                android:id="@+id/layout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_toEndOf="@id/img_item"
                android:layout_toRightOf="@id/img_item"
                android:orientation="horizontal">
            <CheckBox
                    android:id="@+id/btn_set_favorite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@drawable/selector_favorite_item"
                    app:useMaterialThemeColors="false"
                    android:layout_weight="1"/>
        </LinearLayout>

    </RelativeLayout>



</androidx.cardview.widget.CardView>